--- a/templates/add_exercise.html
+++ b/templates/add_exercise.html
@@ -7,12 +7,12 @@
         <div class="add-group">
             <label for="group_name">Group</label>
             <input placeholder="Muscle group" type="text" name="group_name" id="group_name" minlength="3"
-            maxlength="15" pattern="^[a-zA-Z0-9]{3,15}$" class="validate input-group" required>
+            maxlength="15" pattern="^[A-Za-z0-9 _]{3,15}$" class="validate input-group" required>
         </div>
         <div class="add-name">
             <label for="exercise_name">Name</label>
             <input placeholder="Exercise name here" type="text" name="exercise_name" id="exercise_name" minlength="3"
-            maxlength="15" pattern="^[a-zA-Z0-9]{3,15}$" class="validate" required>
+            maxlength="15" pattern="^[A-Za-z0-9 _]{3,15}$" class="validate" required>
         </div>
         <div class="add-info">
             <input placeholder="add weight in kg" type="text" name="weight" id="weight" minlength="1" maxlength="6"
