Error Handlers pages and routes, updated search pages and routes

--- a/templates/add_exercise.html
+++ b/templates/add_exercise.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% block title %}Add Exercise - Fitness Exercise Development{% endblock %}
 {% block content %}
 
-<h3>Add Exercise</h3>
+<h1>Add Exercise</h1>
 
     <form class="add-excerise__form" method="POST" action="{{ url_for('add_exercise') }}">
         <div class="add-group">
