--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
+{% block title %}Fitness Exercise Development{% endblock %}
 {% block content %}
 
-<h3>Welcome to Fitness Exercise development</h3>
-<h5>You custom fitness program web app</h5>
+<h1>Welcome to Fitness Exercise Development</h1>
+<h2>You custom fitness program web app</h2>
 
 <div class="main-card">
     <div class="slider-forms z-depth-2 {% if error_register %} slide-active {% endif %}">
