--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% block title %}{{user.username.capitalize() }} Profile - Fitness Exercise Development{% endblock %}
 {% block content %}
 
-<h3>Profile</h3>
+<h1>Profile</h1>
 
 <div class="profile-info">
     <h6 class="profile-name">Name</h6>
