--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,25 +36,39 @@ html, body {
     align-items: center;
     flex: 1 0 auto;
 }
-
-.container>h3,
-.container>h5,
-.container>h6 {
+.container > h1,
+.container > h2,
+.container > h3,
+.container > h5,
+.container > h6,
+.home-link {
     color: var(--white);
     text-shadow: 1px 1px 20px #000;
 }
 
-.container>h6 {
+.container > h6 {
     line-height: 23px;
 }
 
+.container h1 {
+    font-size: 2.4rem;
+}
+
+.container h2 {
+    font-size: 1.4rem;
+    margin-top: .5rem;
+}
+
+.home-link {
+
+}
 
 @media only screen and (max-width: 480px) {
-    .container h3 {
+    .container h1 {
         font-size: 2.4rem;
     }
 
-    .container h5 {
+    .container h2 {
         font-size: 1.4rem;
     }
 }
@@ -120,7 +134,7 @@ nav {
 }
 
 .sidenav li>a>i {
-    margin-right: 0px;
+    margin-right: 5px;
     color: var(--white);
     width: 30px;
 }
@@ -139,75 +153,6 @@ nav {
     font-size: 17px;
 }
 
-.search-bg {
-    display: flex;
-    background-color: var(--white);
-    height: 35px;
-    border-radius: 17px;
-    margin-right: 15px;
-    margin-top: 15px;
-}
-
-
-
-.search-form input {
-    height: 34px !important;
-    background-color: var(--purple-2) !important;
-    opacity: .8;
-    border-top: 1px solid #9e9e9e !important;
-    border-left: 1px solid #9e9e9e !important;
-    border-top-left-radius: 17px !important;
-    border-bottom-left-radius: 17px !important;
-    padding-left: 10px !important;
-    width: 50px !important;
-    color: white;
-    -webkit-transition: width 0.4s ease-in-out !important;
-    transition: width 0.4s ease-in-out !important;
-  
-}
-
-.search-form input:focus {
-    width: 200px !important;
-}
-
-.search-form button {
-    height: 36px;
-    width: 42px;
-    display: flex;
-    align-items: center;
-    border-top-right-radius: 17px !important;
-    border-bottom-right-radius: 17px !important;
-    border-top: 1px solid #9e9e9e;
-    border-right: 1px solid #9e9e9e;
-    border-bottom: 1px solid #9e9e9e;
-    border-left: none;
-    background-color: var(--purple-2);
-    opacity: .8;
-}
-
-
-.fa-search {
-    font-size: 19px;
-    color: var(--white);
-}
-
-@media only screen and (max-width: 480px) {
-    .search-form {
-        margin-left: 22px;
-    }
-
-    .search-bg {
-        width: 250px;
-        margin-top: 30px;
-        margin-bottom: 10px;
-    }
-
-    .search-form input, .search-form input:focus {
-        width: 100% !important;
-    }
-
-
-  }
 
 footer {
     width: 100%;
@@ -278,7 +223,6 @@ footer {
 .slider-forms {
     background-image: url('/static/images/pattern_bg.jpg');
     background-size: cover;
-    /* background-position: -160px center; */
     background-repeat: repeat-x;
     flex: 0 0 750px;
     max-width: 750px;
@@ -397,7 +341,75 @@ footer {
     }
 }
 
+/* Home */
+.home-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card-button {
+    width: 365px;
+    height: 300px;
+    padding: 0px 35px;
+    color: #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+    background: rgb(255 245 245 / 10%);
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur(20.0px);
+    -webkit-backdrop-filter: blur(20.0px);
+    border: 1px solid rgb(255 255 255 / 61%);
+    border-radius: 20px;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-button:last-child {
+    width: 100%;
+}
+
+@media only screen and (max-width: 480px) {
+    .card-button {
+        width: 330px;
+        height: 220px;
+    }
+}
+
+.card-button:focus,
+.card-button:hover {
+    /* outline: ; arrumar */
+    background-color: var(--flickr-pink);
+    color: var(--white);
+}
+
+.card-button a {
+    color: var(--white);
+    display: grid;
+    grid-template-rows: 1fr 80px;
+    place-items: center;
+}
+
+.card-button i {
+    font-size: 5rem;
+}
+.card-button p {
+    font-size: 1.8rem;
+    text-align: center;
+}
+
 /* Programs */
+.program-estimation {
+    color: var(--white);
+    text-shadow: 1px 1px 20px #000;
+    font-size: 1.4rem;
+    text-align: center;
+    margin-top: 2rem;
+}
+
 .no-exercises h4 {
     text-shadow: 1px 1px var(--black);
 }
@@ -685,6 +697,59 @@ li:last-child>.collapsible-header {
 .program-status p {
     margin-bottom: 2px;
 }
+
+/* Search */
+.search-bg {
+    display: flex;
+    background-color: var(--white);
+    height: 45px;
+    border-radius: 17px;
+}
+
+.search-form {
+    margin: 1.2rem 0;
+    width: 330px;
+}
+
+.search-form input {
+    height: 43px !important;
+    background-color: var(--purple-2) !important;
+    opacity: .8;
+    border-top: 1px solid #9e9e9e !important;
+    border-left: 1px solid #9e9e9e !important;
+    border-top-left-radius: 17px !important;
+    border-bottom-left-radius: 17px !important;
+    padding-left: 10px !important;
+    width: 300px !important;
+    color: white;
+    -webkit-transition: width 0.4s ease-in-out !important;
+}
+
+.search-form button {
+    height: 45px;
+    width: 42px;
+    display: flex;
+    align-items: center;
+    border-top-right-radius: 17px !important;
+    border-bottom-right-radius: 17px !important;
+    border-top: 1px solid #9e9e9e;
+    border-right: 1px solid #9e9e9e;
+    border-bottom: 1px solid #9e9e9e;
+    border-left: none;
+    background-color: var(--purple-2);
+    opacity: .8;
+}
+
+.fa-search {
+    color: var(--white);
+}
+
+@media only screen and (max-width: 480px) {
+    .search-form input, .search-form input:focus {
+        width: 100% !important;
+    }
+}
+
 
 /* Status */
 .status-info {
