--- a/templates/edit_program.html
+++ b/templates/edit_program.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% block title %}Edit Program - Fitness Exercise Development{% endblock %}
 {% block content %}
 
-<h3>Program Editor</h3>
+<h1>Program Editor</h1>
 
 <div class="editor-controls">
     <a href="{{ url_for('add_exercise', username=session['user']) }}" class="btn">Add Exercise +</a>
