--- a/templates/status.html
+++ b/templates/status.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% block title %}App Status - Fitness Exercise Development{% endblock %}
 {% block content %}
 
-<h3>Application Status</h3>
+<h1>Application Status</h1>
 
 <div class="status-info">
 
