--- a/templates/edit_program.html
+++ b/templates/edit_program.html
@@ -22,7 +22,16 @@
             {% if exercise.group_name ==  group %}
             <li>
                 <div class="collapsible-header z-depth-1">{{ exercise.exercise_name }}
-                    <div><a href="{{ url_for('delete_exercise', exercise_id=exercise._id) }}" class="btn btn-editor "><i class="fas fa-trash-alt"></i></a><a href="{{ url_for('edit_exercise', exercise_id=exercise._id) }}" class="btn btn-editor edit">Edit</a><i class="fas fa-chevron-circle-down"></i></div></div>
+                    <div>
+                        <a href="{{ url_for('delete_exercise', exercise_id=exercise._id) }}" class="btn btn-editor ">
+                            <i class="fas fa-trash-alt"></i>
+                        </a>
+                        <a href="{{ url_for('edit_exercise', exercise_id=exercise._id) }}" class="btn btn-editor edit">
+                            Edit
+                        </a>
+                        <i class="fas fa-chevron-circle-down"></i>
+                    </div>
+                </div>
                 <div class="collapsible-body">
                     <div class="exercise-info">
                         <div class="info-name">Weight: </div><span>{{ exercise.weight }}</span><span>kg</span>
