--- a/templates/search.html
+++ b/templates/search.html
@@ -18,16 +18,19 @@
 <div class="exercise-list">
     {% for group in groups_list %}
     <div class="group-list">
-
         <h5 class="group-name">{{group}}</h5>
-
         <ul class="collapsible">
-
             {% for exercise in exercises_list %}
             {% if exercise.group_name ==  group %}
             <li>
-                <div class="collapsible-header z-depth-1">{{ exercise.exercise_name }}<i
-                        class="fas fa-chevron-circle-down"></i></div>
+                <div class="collapsible-header z-depth-1">{{ exercise.exercise_name }}
+                    <div>
+                        <a href="{{ url_for('copy_exercise', exercise_id=exercise._id) }}" class="btn btn-editor ">
+                            <i class="fas fa-plus"></i>
+                        </a>
+                        <i class="fas fa-chevron-circle-down"></i>
+                    </div>
+                </div>
                 <div class="collapsible-body">
                     <div class="exercise-info">
                         <div class="info-name">Weight: </div><span>{{ exercise.weight }}</span><span>kg</span>
@@ -61,8 +64,8 @@
 {% if no_results %}
 <h2>No search results for: {{ query }}</h2>
 {% else %}
-<h2>No ideas to create to create your own exercises? Search for a muscle group or exercecise name to find some exercises
-    cards and add them to your own program</h2>
+<div class="search-intro">No ideas to create to create your own exercises? Search for a muscle group or exercecise name to find some exercises
+    cards and click on <span class="btn btn-editor" id="search-btn"><i class="fas fa-plus"></i></span>to add a exercise to your own program</div>
 {% endif %}
 
 <form class="search-form" method="POST" action="{{ url_for('search') }}">
